# ds3-scraping-text-analysis

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
config/: settings.toml
src/: web_scraping.py
src/config/: config.py  settings.toml
src/enumeration/: __init__.py  damage_type.py  weapon_category.py
src/examples/: word_count_example.py
src/model/: __init__.py  additional_effect.py  attack_power.py  attribute.py  entity.py  guard_absorption.py  miscellaneous.py  skill.py  weapon.py
src/nlp/: __init__.py  basic_nlp_pipeline.py  create_session.py  lda.py  py_ldavis.py  vectorization.py  word_clouds.py
src/scraping/: __init__.py  get_save_links.py  get_save_urls.py  get_save_weapons.py  get_save_weapons_thread.py  load_save_weapons_content.py  load_save_weapons_urls.py  transform_weapons_content.py  weapon_content.py  weapon_content_scraping.py  weapons_links.py  weapons_urls.py  weapons_urls_scraping.py
src/utils/: __init__.py  auto_str.py  csv_utils.py  file_utils.py  json_utils.py  nlp_to_pyldavis.py  path_utils.py  weapon_status_dict.py
