[tool.poetry]
name = "ds3-scraping-text-analysis"
version = "0.1.0"
description = ""
authors = ["Alexandre Ferreira de Lima <alex.ferreiradelima64@gmail.com>"]
readme = "README.md"
packages = [{include = "ds3-scraping-text-analysis"}]

[tool.poetry.dependencies]
python = "^3.8"
findspark = "^2.0.1"
html5lib = "^1.1"
pyspark = "^3.3.1"
spark-nlp = "^4.2.4"
pandas = "^1.5.2"
dynaconf = "^3.1.11"
types-beautifulsoup4 = "^4.11.6.1"
beautifulsoup4 = "^4.11.1"
orjson = "^3.8.3"
lxml = "^4.9.1"
nltk = "^3.7"
scikit-learn = "^1.2.0"
pyldavis = "^3.3.1"
wordcloud = "^1.8.2.2"
matplotlib = "^3.6.2"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
